# sonic-buildimage

./: .1146.patch.swp  .artifactignore  .gitignore  .gitmodules  .pre-commit-config.yaml  0001-Add-new-platform-m2-w6510-48v-on-202305-branch.patch  0001-mm-fix-exec-activate_mm-vs-TLB-shootdown-and-lazy-tl.patch  0001-modify-RA-6510-48-ssdhealth.patch  0001-update-main-cpp.patch  0001-update-sonic-swss.patch  0001-update-swss-main-cpp.patch  0002-update-orch-h.patch  0002-update-sonic-sairedis.patch  0002-update-swss-orch-h.patch  0003-update-configure-ac.patch  0004-update-kernel-patch.patch  1146.patch  Config_db.json  Makefile  Makefile.cache  Makefile.debug  Makefile.work  README.buildsystem.md  README.md  REVERTS_BEFORE_MERGE  ThirdPartyLicenses.txt  azure-pipelines.yml  build-broadcom.sh  build-vs.sh  build.cfg  build.sh  build_dbg_j2.sh  build_debian.sh  build_debian_rootfs.sh  build_debug_docker_j2.sh  build_docker.sh  build_exclude_cfg.py  build_image.sh  build_img_metadata.py  build_kvm_image.sh  (+23 more)
.azure-pipelines/: SAI.yml  azure-pipelines-Official.yml  azure-pipelines-UpgradeVersion.yml  azure-pipelines-UpgrateVersion.yml  azure-pipelines-build-ubuntu-2004.yml  azure-pipelines-build.yml  azure-pipelines-customize-vs-image.yml  azure-pipelines-image-template.yml  azure-pipelines-job-groups.yml  azure-pipelines-repd-build-variables.yml  azure-pipelines-update-step-properties.yml  build-commonlib.yml  build-template.yml  check-dirty-version.yml  cleanup.yml  common-lib.yml  docker-sonic-mgmt-py3-only.yml  docker-sonic-mgmt.yml  docker-sonic-slave-arm64.yml  docker-sonic-slave-armhf.yml  docker-sonic-slave-template.yml  docker-sonic-slave.yml  dpkg-cache-cleanup.yml  live-patch.yml  new-build-template.yml  official-build-cache.yml  official-build-cisco-8000.yml  official-build-multi-asic.yml  official-build.yml  official.yml  prepare_agent.yml  reproducible-build-upload.yml  run-test-scheduler-template.yml  run-test-template.yml  skip-vstest-include  sonic-dbsyncd.yml  sonic-mgmt-common.yml  sonic-mgmt-framework.yml  sonic-py-swsssdk.yml  sonic-snmpagent.yml  (+14 more)
.github/: CODEOWNERS  issue_template.md  pull_request_template.md
.pipelines/: DownloadPublicImage.yml  MsVstsUtils.ps1  OneBranch.BuddyBuild.yml  OneBranch.OfficialBuild.yml  OneBranch.PullRequest.yml  azure-pipelines-repd-build-variables.yml  code-merge-template.yml  code-merge.yml  disk_nfs.yml  init-agent.yml  post-build-steps.yml  prepare_agent.yml
.svn/: wc.db
azure-pipelines/: buildjob.yaml  official.yml
debian/: rules  sonic-platform-ingrasys-s9180-32x.postinst  sonic-platform-ingrasys-s9180-32x.postrm  sonic-platform-ingrasys-s9180-32x.prerm  sonic-platform-ingrasys-s9180-32x.upstart  sonic-platform-ingrasys-s9280-64x.prerm
dockers/: dockerfile-macros.j2
files/: ethtool
installer/: default_platform.conf  install.sh
linters/: setup.cfg  tox.ini
pipelines/: buildimage.yaml  official_build.yaml  official_build.yml
platform/: broadcom-dnx
rules/: acms-client.dep  acms-client.mk  asyncsnmp-py3.dep  asyncsnmp-py3.mk  base-os-compatibility-version.mk  bash.dep  bash.mk  bgpcfgd.dep  bond.dep  bond.mk  config  cracklib.deb  cracklib.mk  dash-sai.dep  dash-sai.mk  dbsyncd-py3.dep  debootstrap.mk  device-health.dep  device-health.mk  dhcp6relay.mk  dhcpmon.dep  dhcpmon.mk  (+304 more)
src/libebpf/src/libutil/: Makefile.am  bpf_load.c  ebpftest.c  libbpf.c  libebpf.c
src/libebpf/src/libutil/ebpf/: bpf_helpers.h  libebpf.h
src/sonic-cli/: Makefile.am  configure.ac  sonic-cli.cpp
src/sonic-cli/debian/: changelog  control  copyright
src/sonic-cli/tests/: Makefile.am  main.cpp
src/sonic-eventd/: Makefile  Makefile.am  configure.ac
src/sonic-eventd/debian/: changelog  control  eventd.install  rules  sonic-eventd.install  sonic-rsyslog-plugin.install
src/sonic-eventd/etc/: eventd.json
src/sonic-eventd/eventd/: Makefile.am  eventd.cpp  eventd.h
src/sonic-eventd/include/: eventconsume.h  eventutils.h
src/sonic-eventd/lib/: Makefile.am  configure.ac
src/sonic-eventd/lib/debian/: changelog  control  libeventnotify-dev.install  libeventnotify-dev.links  libeventnotify.install
src/sonic-eventd/lib/include/: eventnotify.h
src/sonic-eventd/lib/src/: Makefile.am  eventnotify.cpp
src/sonic-eventd/rsyslog_plugin/: main.cpp  rsyslog_plugin.cpp  rsyslog_plugin.h  subdir.mk  syslog_parser.cpp  syslog_parser.h  timestamp_formatter.cpp  timestamp_formatter.h
src/sonic-eventd/rsyslog_plugin_tests/: rsyslog_plugin_ut.cpp  subdir.mk  test_events_info_1.json  test_events_info_2.json  test_events_info_3.json  test_events_info_4.json  test_events_info_5.json  test_events_info_6.json  test_events_info_7.json  test_regex_2.rc.json  test_regex_4.rc.json
src/sonic-eventd/src/: Makefile.am  eventconsume.cpp  eventconsume.h  eventd.cpp  eventd.d  eventd.h  eventutils.cpp  eventutils.h  loghandler.cpp  main.cpp  subdir.mk
src/sonic-eventd/tests/: event_unittest.py  eventd_ut.cpp  eventdb_ut.cpp  main.cpp  subdir.mk
src/sonic-eventd/tests/eventnotify/: eventnotify.py
src/sonic-eventd/tests/redis_multi_db_ut_config/: database_config.json  database_config0.json  database_config1.json
src/sonic-eventd/tools/: events_monit_test.py  events_publish_tool.py  events_tool.cpp  monit_events  rsyslog_plugin.py  sample_ip.json
src/sonic-eventd/var/evprofile/: default.json
src/sonic-framework/: Makefile.am  configure.ac
src/sonic-framework/rebootbackend/: Makefile.am  container_stop.pb.cc  container_stop.pb.h  gnoi_reboot.xml  init_thread.cpp  init_thread.h  interfaces.cpp  interfaces.h  reboot_common.cpp  reboot_common.h  reboot_interfaces.h  reboot_thread.cpp  reboot_thread.h  rebootbackend.cpp  rebootbe.cpp  rebootbe.h  redis_utils.cpp  redis_utils.h  telemetry_helper.cpp  telemetry_helper.h
src/sonic-framework/tests/: Makefile.am  init_thread_test.cpp  mock_reboot_interfaces.h  reboot_thread_test.cpp  rebootbe_test.cpp  redis_utils_test.cpp  test_utils_common.cpp  test_utils_common.h
src/tacacs/tacplus_probe/src/: Makefile.am  configure.ac
src/tacacs/tacplus_probe/src/debian/: changelog  control
(+11770 files in other folders)
